* Fixed iSPARQL icons placed on Home screen on iPhone/iPod now have the   WebApp a ppearance (i.e. no URL bar, etc. controls.) * Fixed a regression causing reappearance of Ubiq gem on non-firefox browsers * Fixed missing message candlers for geocoding module * Disabled buggy location UI absorbing into statusui * Improved formatting of errors in response tab somewhat

--- a/binsrc/isparql/styles/style.css
+++ b/binsrc/isparql/styles/style.css
@@ -358,6 +358,12 @@ label.load { font-size: 8pt; font-weight: normal}
   margin-right: 6px;
 }
 
+#page_content {
+  width: 100%;
+  float:left;
+  clear: both;
+}
+
 #page_results{
   padding:10px 0px 0px 0px;
 }
